# fast-zero

./: .gitignore  pyproject.toml
fast_zero/: app.py  models.py
migrations/versions/: 6a9c18196590_add_updated_at_field_in_users_table.py  cba123adca2e_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
