[project]
name = "fast-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["fastapi[standard]>=0.135.1"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "ruff>=0.15.7",
  "taskipy>=1.14.1",
  "typos>=1.44",
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]
format.preview = true
format.quote-style = "single"
lint.select = ["E", "F", "I", "PL", "PT", "W"]
lint.preview = true
