[project]
name = "fast-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "ruff>=0.15.7",
  "taskipy>=1.14.1",
  "typos>=1.44",
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]
format.preview = true
format.quote-style = "single"
lint.select = ["E", "F", "I", "PL", "PT", "W"]
lint.preview = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'
